linking view model with repo and ui , aded network result , logger classes, image loading using coil,initial recycler view setup and list shown

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        dataBinding true
+    }
 }
 
 dependencies {
@@ -60,4 +63,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2"
+
+    // Image Loading library Coil
+    implementation "io.coil-kt:coil:0.13.0"
 }
