--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -16,6 +17,7 @@
         android:theme="@style/Theme.NasaImageOfTheDay"
         tools:targetApi="31">
         <activity
+            android:parentActivityName=".ui.MainActivity"
             android:name=".ui.DetailsActivity"
             android:exported="false" />
         <activity
